Fix strange scrollbar on some random screen resolutions. No horizontal scroll, be a man

--- a/src/res/globals.scss
+++ b/src/res/globals.scss
@@ -11,6 +11,7 @@ html {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
 @layer utilities {
